--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ dev = [
     "pytest==8.3.4",
     "pytest-asyncio==0.25.2",
 ]
+asr = [
+    "faster-whisper==1.0.3",
+    "numpy==1.26.4",
+]
 
 [build-system]
 requires = ["setuptools>=69.0.0"]
