--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dev = [
 asr = [
     "faster-whisper==1.0.3",
     "numpy==1.26.4",
+    "requests==2.32.3",
 ]
 diarization = [
     "pyannote.audio==3.3.0",
