--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,14 @@
 # ECHOPANEL_HF_TOKEN=hf_...
 # ECHOPANEL_DIARIZATION_MAX_SECONDS=1800 (Max buffer size)
 
+# 🤖 ASR Provider Selection
+# Options: "faster_whisper" (default, local), "voxtral_realtime" (local, voxtral.c)
+# ECHOPANEL_ASR_PROVIDER=faster_whisper
+
+# 🗣️ Voxtral Realtime (local, open-source, requires voxtral.c + 8.9GB model)
+# ECHOPANEL_VOXTRAL_BIN=../voxtral.c/voxtral
+# ECHOPANEL_VOXTRAL_MODEL=../voxtral.c/voxtral-model
+
 # 🎤 Audio Processing
 # Chunk size for ASR processing in seconds
 # ECHOPANEL_ASR_CHUNK_SECONDS=4
