--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ asr = [
     "faster-whisper==1.0.3",
     "numpy==1.26.4",
     "requests==2.32.3",
+    "pywhispercpp>=1.3.0",
 ]
 
 diarization = [
