--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "EchoPanel v0.1 backend and tooling"
 requires-python = ">=3.11"
 dependencies = [
+    "aiosqlite>=0.22.1",
     "fastapi==0.115.6",
     "huggingface-hub>=0.34.0,<1.0",
     "mlx-audio>=0.2.9",
